feat: ai个性推荐功能测试